Fixed form whitespace.

--- a/css/base.css
+++ b/css/base.css
@@ -75,62 +75,57 @@ textarea {
   border: 1px solid #ddd;
   border-radius: 3px;
   font-family: "Bitstream Vera Sans Mono", Consolas, Courier, monospace;
-  font-size: 12px;
-  margin: 0 2px;
-  padding: 0px 5px;
+  font-size: 15px;
+  margin: 0 auto;
+  margin-top: 10px;
+  padding: 10px 10px;
+  resize: none;
+}
+
+#queryDiv {
+  width: 800px;
+  height: auto;
+  margin: 0 auto;
+  text-align: center;
+}
+
+#queryForm {
+  width: 400px;
+  height: auto;
+  margin: 0 auto;
+  text-align: center;
 }
 
 #formbox {
   width: 250px;
   height: 30px;
+
   font-size: 15px;
+
   text-align: center;
+
   word-spacing: 2px;
   letter-spacing: 1.5px;
   padding: 8px;
-  margin: .5%;
+  margin: 0 auto;
+  margin-top: 10px;
 }
-#formbox:disabled {
-  background: #FFFFFF;
-  border: #FFFFFF;
-  color: #FFFFFF;
-  opacity: 0;
-  margin: 0;
-  padding: 0;
-
-}
-#formbox:disabled::-webkit-input-placeholder { /* WebKit browsers */
-  color: #FFFFFF;
-  opacity: 0;
-}
-#formbox:disabled:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-  color: #FFFFFF;
-  opacity: 0;
-}
-#formbox:disabled::-moz-placeholder { /* Mozilla Firefox 19+ */
-  color: #FFFFFF;
-  opacity: 0;
-}
-#formbox:disabled:-ms-input-placeholder { /* Internet Explorer 10+ */
-  color: #FFFFFF;
-  opacity: 0;
-}
-
 #submit {
+
+  width: 100px;
+  height: 35px;
+
+  border: none;
+
   font-size: 17px;
   font-weight: bold;
   letter-spacing: 2px;
-  width: 100px;
-  border: none;
-  height: 35px;
+
   text-align: center;
-  margin: auto;
+  margin: 0 auto;
+  margin-top: 10px;
   color: #4C4C4C;
-}
-#submit:disabled {
-  background: #FFFFFF;
-  border: #FFFFFF;
-  color: #FFFFFF;
+
 }
 #dataTitle {
   text-decoration: underline;
